tests/compile-fail/panic2.rs
//error-pattern: the evaluated program panicked

fn main() {
    std::panic!("{}-panicking from libstd", 42);
}
